[project]
name = "banner_manggee"
version = "0.2.0"
description = "Banner Output Program"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
