[project]
name = "banner_manggee"
version = "0.2.1"
description = "Banner Output Program"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
manggee-banner = 'banner_manggee.banner:show'
manggee-pic = 'banner_manggee.banner:pic'


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/mangG907/banner_manggee"
Issues = "https://github.com/mangG907/banner_manggee/issues"
